--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "pixi.js": "^8.5.2"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "pixi.js": "^8.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "vite": "^5.4.10"
